src/css/index.css
body, html {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-color: #ECECEC;
}

#banner {
    width: 100vw;
    height: 250px;
    background-image: url('src/banner.jpg'); 
    background-size: cover; 
    background-position: center;
    display: flex;
    align-items: flex-end;
    justify-content: flex-start;
    padding: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    box-sizing: border-box;
    background-color: #2C3E50;
}

#profile-info {
    display: flex;
    align-items: flex-end;
}

.profile-image {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    object-fit: fill;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin-right: 20px;
}

#name h1 {
    margin: 0;
    font-size: 24px;
    color: white;
}

#name h2 {
    margin: 0;
    font-size: 16px;
    color: #ecf0f1;
}

.content {
    display: flex;
    min-height: 100vh;
    padding: 20px;
    box-sizing: border-box;
    background-color: #ECECEC;
}

.sidebar {
    width: 30%;
    background-color: #34495E;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
    text-align: center;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.sidebar button {
    background-color: rgb(48, 58, 65);
    color: white;
    padding: 15px;
    margin-bottom: 10px;
    border: none;
    font-size: 16px;
    cursor: pointer;
    text-align: left;
    width: 100%;
}

.sidebar button:hover {
    background-color: rgb(27, 27, 29);
}

.main-content {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    padding: 20px;
    background-color: transparent;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    gap: 20px;
}

.hidden-section {
    display: none;
}

.project-button {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    text-decoration: none;
    background-color: #1c1c1e;
    color: white;
    border-radius: 10px;
    overflow: hidden; 
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
    transition: transform 0.3s ease, box-shadow 0.3s ease; 
    width: 100px;
    cursor: pointer; 
    padding: 20px;
}

/* Scale and elevate button on hover */
.project-button:hover {
    transform: translateY(-5px); /* Slight lift on hover */
    transform: translateX(-5px);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Darker shadow */
}

/* Image within the project button */
.project-image {
    width: 100px;
    height: 100px; /* Fixed height for images */
    object-fit: cover; /* Cover entire container without stretching */
}

h1, h2, h3 {
    color: #2C3E50;
}

.projectSpace{
    padding: 15px;
}


.progress-bar {
    width: 100%;
    background-color: #ecf0f1;
    border-radius: 10px;
    overflow: hidden;
    height: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.progress {
    height: 100%;
    background-color: #3498db;
    text-align: right;
    padding-right: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 10px 0 0 10px;
    color: white;
    font-weight: bold;
    transition: width 0.3s ease;
}

